# linalg_lib

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml  linters.yml
include/: matrix.h
include/linalg/: matrix.h
include/linalg/impl/: check_include.h  data_impl.h  inversed_impl.h  inverted_impl.h  matrix_impl.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/test_from_example/: CMakeLists.txt  matlib.h  run_test.sh
tests/test_from_example/: matlib.h  test_from_example.cpp
tests/unit/: CMakeLists.txt  common.h  main.cpp  tests_data.cpp  tests_inversed.cpp  tests_matrix.cpp
